--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ asgiref==3.6.0
 backports.zoneinfo;python_version<"3.9"
 Django==4.2
 djangorestframework==3.14.0
+python-dotenv==1.0.0
 pytz==2023.3
 sqlparse==0.4.4
